Fix logo on firefox.

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -268,6 +268,7 @@ tbody tr:nth-child(odd) th {
 .logo {
   display: block;
   margin: 0 auto;
+  width: 10rem;
 }
 
 .page, .post, .posts {
